# realtime-voice-ai-framework

./: .gitignore  README.md  agent.py  client.html  global_rules.py  master_prompt.py  pyproject.toml
apps/server_ws/: main.py
configs/: config.example.yaml
core/: interfaces.py  orchestrator.py
plugins/llm/: openai_adapter.py
plugins/stt/: faster_whisper_adapter.py  groq_stt_adapter.py  wav2vec2_adapter.py
plugins/tts/: coqui_tts_adapter.py  orca_tts_adapter.py  silero_tts_adapter.py
